tests/src/frontend/syntax/invalid/bool_literal.sk
fun main(): String {
  true = false;
  if (true) {
    "Some kidding"
  } else {
    "Trololol"
  }
}
